Workspace_Shakespeare/src/grammarPackage/ShakespeareParser.java
// $ANTLR 3.5.1 C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g 2023-10-12 19:45:18

    package grammarPackage;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class ShakespeareParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "A", "ACT", "AMI", "AND", "AP", 
		"ARE", "AS", "BETTER", "CHARACTER", "CL", "CM", "COMMENT", "DIFFBET", 
		"DIGIT", "DOT", "ENTER", "EP", "ERROR_TK", "EXEUNT", "EXIT", "FS", "ID", 
		"IFNOT", "IFSO", "LB", "LETTER", "LETUS", "ME", "NEGATIVEADJECTIVE", "NEGATIVENOUN", 
		"NEUTRALADJECTIVE", "NEUTRALNOUN", "POSITIVEADJECTIVE", "POSITIVENOUN", 
		"PRINTASCII", "PRINTVALUE", "PROCEEDTO", "PRODOF", "QM", "RB", "READASCII", 
		"READVALUE", "RECALL", "REMEMBER", "RETURNTO", "SC", "SCENE", "SCENEC", 
		"SUMOF", "THAN", "THOUART", "THYSELF", "WEMUST", "WESHALL", "WORSE", "WS", 
		"YOU", "YOUC", "YOURSELF"
	};
	public static final int EOF=-1;
	public static final int A=4;
	public static final int ACT=5;
	public static final int AMI=6;
	public static final int AND=7;
	public static final int AP=8;
	public static final int ARE=9;
	public static final int AS=10;
	public static final int BETTER=11;
	public static final int CHARACTER=12;
	public static final int CL=13;
	public static final int CM=14;
	public static final int COMMENT=15;
	public static final int DIFFBET=16;
	public static final int DIGIT=17;
	public static final int DOT=18;
	public static final int ENTER=19;
	public static final int EP=20;
	public static final int ERROR_TK=21;
	public static final int EXEUNT=22;
	public static final int EXIT=23;
	public static final int FS=24;
	public static final int ID=25;
	public static final int IFNOT=26;
	public static final int IFSO=27;
	public static final int LB=28;
	public static final int LETTER=29;
	public static final int LETUS=30;
	public static final int ME=31;
	public static final int NEGATIVEADJECTIVE=32;
	public static final int NEGATIVENOUN=33;
	public static final int NEUTRALADJECTIVE=34;
	public static final int NEUTRALNOUN=35;
	public static final int POSITIVEADJECTIVE=36;
	public static final int POSITIVENOUN=37;
	public static final int PRINTASCII=38;
	public static final int PRINTVALUE=39;
	public static final int PROCEEDTO=40;
	public static final int PRODOF=41;
	public static final int QM=42;
	public static final int RB=43;
	public static final int READASCII=44;
	public static final int READVALUE=45;
	public static final int RECALL=46;
	public static final int REMEMBER=47;
	public static final int RETURNTO=48;
	public static final int SC=49;
	public static final int SCENE=50;
	public static final int SCENEC=51;
	public static final int SUMOF=52;
	public static final int THAN=53;
	public static final int THOUART=54;
	public static final int THYSELF=55;
	public static final int WEMUST=56;
	public static final int WESHALL=57;
	public static final int WORSE=58;
	public static final int WS=59;
	public static final int YOU=60;
	public static final int YOUC=61;
	public static final int YOURSELF=62;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public ShakespeareParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public ShakespeareParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return ShakespeareParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g"; }


	    SPLhandler h;	// Handler declaration
	    public SPLhandler getHandler () {
	        return h;
	    }
	    
	    // Override and delegation in the management of syntactic errors
	    public void displayRecognitionError(String[] tokenNames,RecognitionException e) {
	     // getting some meta info of the error
	        String hdr = " * " + getErrorHeader(e);
	        String msg = " - " + getErrorMessage(e, tokenNames);
	        
	        // current token
	        Token tk = input.LT(1);
	        
	        // let the handler handle the message
	        h.handleError(tk, hdr, msg);
	    }

	    // passing token stream to the handler	
	    void initParser () {
	        h = new SPLhandler(input);
	    }



	// $ANTLR start "parseSPL"
	// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:44:1: parseSPL : titleRule ;
	public final void parseSPL() throws RecognitionException {
		initParser();
		try {
			// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:46:2: ( titleRule )
			// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:47:6: titleRule
			{
			pushFollow(FOLLOW_titleRule_in_parseSPL63);
			titleRule();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "parseSPL"



	// $ANTLR start "titleRule"
	// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:51:1: titleRule : ( titlecharRule )* d= DOT bodyRule ;
	public final void titleRule() throws RecognitionException {
		Token d=null;

		try {
			// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:52:2: ( ( titlecharRule )* d= DOT bodyRule )
			// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:53:6: ( titlecharRule )* d= DOT bodyRule
			{
			// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:53:6: ( titlecharRule )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==ID) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:53:6: titlecharRule
					{
					pushFollow(FOLLOW_titlecharRule_in_titleRule84);
					titlecharRule();
					state._fsp--;

					}
					break;

				default :
					break loop1;
				}
			}

			d=(Token)match(input,DOT,FOLLOW_DOT_in_titleRule89); 
			h.checkTitle(d);
			pushFollow(FOLLOW_bodyRule_in_titleRule103);
			bodyRule();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "titleRule"



	// $ANTLR start "titlecharRule"
	// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:58:1: titlecharRule : f= ID ;
	public final void titlecharRule() throws RecognitionException {
		Token f=null;

		try {
			// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:59:2: (f= ID )
			// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:60:2: f= ID
			{
			f=(Token)match(input,ID,FOLLOW_ID_in_titlecharRule127); 
			h.buildTitle(f);
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "titlecharRule"



	// $ANTLR start "bodyRule"
	// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:64:1: bodyRule : ( dramatisPersonaeRule )+ ( actRule ( sceneRule )+ )+ ;
	public final void bodyRule() throws RecognitionException {
		try {
			// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:65:2: ( ( dramatisPersonaeRule )+ ( actRule ( sceneRule )+ )+ )
			// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:66:6: ( dramatisPersonaeRule )+ ( actRule ( sceneRule )+ )+
			{
			// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:66:6: ( dramatisPersonaeRule )+
			int cnt2=0;
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==CHARACTER) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:66:6: dramatisPersonaeRule
					{
					pushFollow(FOLLOW_dramatisPersonaeRule_in_bodyRule154);
					dramatisPersonaeRule();
					state._fsp--;

					}
					break;

				default :
					if ( cnt2 >= 1 ) break loop2;
					EarlyExitException eee = new EarlyExitException(2, input);
					throw eee;
				}
				cnt2++;
			}

			// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:67:6: ( actRule ( sceneRule )+ )+
			int cnt4=0;
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==ACT) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:67:7: actRule ( sceneRule )+
					{
					pushFollow(FOLLOW_actRule_in_bodyRule163);
					actRule();
					state._fsp--;

					// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:67:15: ( sceneRule )+
					int cnt3=0;
					loop3:
					while (true) {
						int alt3=2;
						int LA3_0 = input.LA(1);
						if ( (LA3_0==SCENE) ) {
							alt3=1;
						}

						switch (alt3) {
						case 1 :
							// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:67:15: sceneRule
							{
							pushFollow(FOLLOW_sceneRule_in_bodyRule165);
							sceneRule();
							state._fsp--;

							}
							break;

						default :
							if ( cnt3 >= 1 ) break loop3;
							EarlyExitException eee = new EarlyExitException(3, input);
							throw eee;
						}
						cnt3++;
					}

					}
					break;

				default :
					if ( cnt4 >= 1 ) break loop4;
					EarlyExitException eee = new EarlyExitException(4, input);
					throw eee;
				}
				cnt4++;
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "bodyRule"



	// $ANTLR start "dramatisPersonaeRule"
	// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:71:1: dramatisPersonaeRule : ch= CHARACTER co= COMMENT ;
	public final void dramatisPersonaeRule() throws RecognitionException {
		Token ch=null;
		Token co=null;

		try {
			// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:72:6: (ch= CHARACTER co= COMMENT )
			// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:73:6: ch= CHARACTER co= COMMENT
			{
			ch=(Token)match(input,CHARACTER,FOLLOW_CHARACTER_in_dramatisPersonaeRule195); 
			co=(Token)match(input,COMMENT,FOLLOW_COMMENT_in_dramatisPersonaeRule199); 
			h.checkPersonae(ch, co);
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "dramatisPersonaeRule"



	// $ANTLR start "actRule"
	// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:78:1: actRule : ACT rn= ID co= COMMENT ;
	public final void actRule() throws RecognitionException {
		Token rn=null;
		Token co=null;

		try {
			// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:79:6: ( ACT rn= ID co= COMMENT )
			// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:80:6: ACT rn= ID co= COMMENT
			{
			match(input,ACT,FOLLOW_ACT_in_actRule231); 
			rn=(Token)match(input,ID,FOLLOW_ID_in_actRule235); 
			co=(Token)match(input,COMMENT,FOLLOW_COMMENT_in_actRule239); 
			h.checkAct(rn, co);
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "actRule"



	// $ANTLR start "sceneRule"
	// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:85:1: sceneRule : SCENE rn= ID co= COMMENT ( enterRule )? ( stageEventRule )* ( conditionalRule )? ( exitRule | exeuntRule )? ;
	public final void sceneRule() throws RecognitionException {
		Token rn=null;
		Token co=null;

		try {
			// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:86:2: ( SCENE rn= ID co= COMMENT ( enterRule )? ( stageEventRule )* ( conditionalRule )? ( exitRule | exeuntRule )? )
			// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:87:6: SCENE rn= ID co= COMMENT ( enterRule )? ( stageEventRule )* ( conditionalRule )? ( exitRule | exeuntRule )?
			{
			match(input,SCENE,FOLLOW_SCENE_in_sceneRule278); 
			rn=(Token)match(input,ID,FOLLOW_ID_in_sceneRule282); 
			co=(Token)match(input,COMMENT,FOLLOW_COMMENT_in_sceneRule286); 
			h.checkScene(rn, co);
			// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:89:6: ( enterRule )?
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==LB) ) {
				int LA5_1 = input.LA(2);
				if ( (LA5_1==ENTER) ) {
					alt5=1;
				}
			}
			switch (alt5) {
				case 1 :
					// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:89:6: enterRule
					{
					pushFollow(FOLLOW_enterRule_in_sceneRule305);
					enterRule();
					state._fsp--;

					}
					break;

			}

			// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:90:6: ( stageEventRule )*
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==CHARACTER) ) {
					int LA6_1 = input.LA(2);
					if ( (LA6_1==CL) ) {
						int LA6_3 = input.LA(3);
						if ( (LA6_3==EOF||LA6_3==ACT||LA6_3==CHARACTER||LA6_3==LB||(LA6_3 >= PRINTASCII && LA6_3 <= PRINTVALUE)||(LA6_3 >= READASCII && LA6_3 <= REMEMBER)||LA6_3==SCENE||LA6_3==THOUART||LA6_3==YOU) ) {
							alt6=1;
						}

					}

				}

				switch (alt6) {
				case 1 :
					// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:90:6: stageEventRule
					{
					pushFollow(FOLLOW_stageEventRule_in_sceneRule313);
					stageEventRule();
					state._fsp--;

					}
					break;

				default :
					break loop6;
				}
			}

			// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:91:6: ( conditionalRule )?
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==CHARACTER) ) {
				alt7=1;
			}
			switch (alt7) {
				case 1 :
					// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:91:6: conditionalRule
					{
					pushFollow(FOLLOW_conditionalRule_in_sceneRule321);
					conditionalRule();
					state._fsp--;

					}
					break;

			}

			// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:92:6: ( exitRule | exeuntRule )?
			int alt8=3;
			int LA8_0 = input.LA(1);
			if ( (LA8_0==LB) ) {
				int LA8_1 = input.LA(2);
				if ( (LA8_1==EXIT) ) {
					alt8=1;
				}
				else if ( (LA8_1==EXEUNT) ) {
					alt8=2;
				}
			}
			switch (alt8) {
				case 1 :
					// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:92:7: exitRule
					{
					pushFollow(FOLLOW_exitRule_in_sceneRule330);
					exitRule();
					state._fsp--;

					}
					break;
				case 2 :
					// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:92:18: exeuntRule
					{
					pushFollow(FOLLOW_exeuntRule_in_sceneRule334);
					exeuntRule();
					state._fsp--;

					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "sceneRule"



	// $ANTLR start "enterRule"
	// C:\\Users\\pippo\\Desktop\\LFC_project\\Workspace_Shakespeare\\src\\grammarPackage\\Shakespeare.g:96:1: enterRule : LB ENTER (ch1= CHARACTER )? (and= AND ch2= CHARACTER )? RB ;
	public final void enterRule() throws RecognitionException {
		Token ch1=null;
		Token and=null;
		Token ch2=null;
